[package]
name = "ghfetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
tokio = { version = "1.27.0", features = ["full"] }
fields-iter = "0.0.3"
colored = "2.0.0"
image = "0.24.6"

